<resources>
    <string name="app_name">PastTime</string>
    <string name="facebook_app_id">1713925962222515</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Categories for NavDrawer -->
    <string name="top">Top</string>
    <string name="baseball">Baseball</string>
    <string name="basketball">Basketball</string>
    <string name="football">Football</string>
    <string name="hockey">Hockey</string>
    <string name="soccer">Soccer</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Login screen -->
    <string name="facebook_login">Facebook Login</string>
</resources>
