<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/ic_star_rate"
            android:title="@string/top"/>
        <item
            android:id="@+id/nav_baseball"
            android:icon="@drawable/ic_menu_baseball"
            android:title="@string/baseball"/>
        <item
            android:id="@+id/nav_basketball"
            android:icon="@drawable/ic_menu_basketball"
            android:title="@string/basketball"/>
        <item
            android:id="@+id/nav_football"
            android:icon="@drawable/ic_menu_football"
            android:title="@string/football"/>

        <item
            android:id="@+id/nav_hockey"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/hockey"/>

        <item
            android:id="@+id/nav_soccer"
            android:icon="@drawable/ic_menu_soccer"
            android:title="@string/soccer"/>
    </group>

</menu>
